Replace getFirst usages with index access